--- a/assessment3.html
+++ b/assessment3.html
@@ -9,6 +9,6 @@
 <body>
     <iframe
     width="600" height="300" src="C:\Users\SWAPNAJ\Desktop\prepbyte\session\ea12\assesment1.html" ></iframe><br><br><br>
-    <p style="text-align:center;"> <a href="C:\Users\SWAPNAJ\Videos\53a7adb652864bf2be410bec6e590f7f.mp4">Click here to watch the video</a></p>
+    <p style="text-align:center;"> <a href="./vedio.mp4">Click here to watch the video</a></p>
 </body>
 </html>:
