--- a/assessment3.html
+++ b/assessment3.html
@@ -11,4 +11,4 @@
     width="600" height="300" src="C:\Users\SWAPNAJ\Desktop\prepbyte\session\ea12\assesment1.html" ></iframe><br><br><br>
     <p style="text-align:center;"> <a href="./vedio.mp4">Click here to watch the video</a></p>
 </body>
-</html>:
+</html>
