--- a/assesment1.html
+++ b/assesment1.html
@@ -16,7 +16,7 @@
     <img
     width="=20"
      higth="5"
-      src="C:\Users\SWAPNAJ\Desktop\download.png"><br>
+      src="./download.png"><br>
      <h4> Uploaded image </h4>
      <img
      width="=20"
