--- a/assessment3.html
+++ b/assessment3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <iframe
-    width="600" height="300" src="C:\Users\SWAPNAJ\Desktop\prepbyte\session\ea12\assesment1.html" ></iframe><br><br><br>
+    width="600" height="300" src="./assesment1.html" ></iframe><br><br><br>
     <p style="text-align:center;"> <a href="./vedio.mp4">Click here to watch the video</a></p>
 </body>
 </html>
